src/test/deca/syntax/invalid/2_block_manque_accolade.deca
// Description:
//    tests de non-terminal 'block' qui manque un accolade.
//
// Resultats:
//    Ligne 10 : Erreur de syntaxe.
//
// Historique:
//    cree le 01/01/2023

// Un exemple de programme Deca
{
